--- a/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
+++ b/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
@@ -34,6 +34,10 @@
 			<action method="addCss"><stylesheet>css/animation.css</stylesheet></action>
 			<action method="addCss"><stylesheet>css/settings.css</stylesheet></action>
 			<action method="addCss"><stylesheet>css/captions.css</stylesheet></action>
+			<action method="addCss"><stylesheet>css/well.css</stylesheet></action>
+			<action method="addCss"><stylesheet>css/form.css</stylesheet></action>
+			<action method="addCss"><stylesheet>css/button.css</stylesheet></action>
+			<action method="addCss"><stylesheet>css/login.css</stylesheet></action>
 			<action ifconfig="shoppersettings/design/override_css" method="addItem"><type>skin_css</type><name>css/override.css</name></action>
 
             <action method="addItem"><type>js</type><name>queldorei/html5shiv.js</name><params/><if>lt IE 9</if></action>
