--- a/htdocs/app/design/frontend/jumbobag/default/template/customer/form/login.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/customer/form/login.phtml
@@ -32,6 +32,63 @@
  */
 ?>
 
+<section class="login well">
+    <header class="well__header">
+        <h1 class="well__header__title"><?= $this->__('Sign In') ?></h1>
+    </header>
+
+    <article class="well__body">
+        <?= $this->getMessagesBlock()->getGroupedHtml() ?>
+        <?= $this->getChildHtml('customer.form.login.extra')?>
+
+        <form class="form" action="<?php echo $this->getPostActionUrl() ?>" method="post" id="form-login">
+            <input type="hidden" name="form_key" value="<?= Mage::getSingleton('core/session')->getFormKey(); ?>" />
+
+            <div class="form__group">
+                <label for="email" class="required">
+                    <?= $this->__('Email Address') ?><em>*</em>
+                </label>
+                <input type="text" name="login[username]" value="<?= $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?= $this->__('Email Address') ?>" />
+            </div>
+
+            <div class="form__group">
+                <label for="pass" class="required">
+                    <?= $this->__('Password') ?><em>*</em>
+                </label>
+                <input type="password" name="login[password]" class="input-text required-entry validate-password" id="pass" title="<?= $this->__('Password') ?>" />
+            </div>
+
+            <div class="form__submit">
+                <button type="submit" class="btn" title="<?= $this->__('Login') ?>" name="send" id="send2">
+                    <?= $this->__('Login') ?>
+                </button>
+
+                <a href="<?= $this->getForgotPasswordUrl() ?>" class="login__forgotPsw" id="forgot-password">
+                    <?= $this->__('Forgot Your Password?') ?>
+                </a>
+            </div>
+
+            <div class="form__extra">
+                <?= $this->__('* Required Fields') ?>
+            </div>
+        </form>
+    </article>
+</section>
+
+<section class="well well--gray">
+    <header class="well__header">
+        <h1 class="well__header__title"><?= $this->__('Sign Up') ?></h1>
+    </header>
+
+    <article class="well__body">
+        <button type="button" title="<?= $this->__('Create an Account') ?>" class="btn" onclick="window.location='<?= $this->getCreateAccountUrl() ?>';">
+            <?= $this->__('Create an Account') ?>
+        </button>
+
+        <?php echo $this->getChildHtml('amazon_sign_in')?>
+    </article>
+</section>
+
 <div class="account-login">
 
     <div class="block block-login">
@@ -43,11 +100,11 @@
                     </div>
                     <div class="block-content">
 
-                        <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+                        <?= $this->getMessagesBlock()->getGroupedHtml() ?>
                         <?php /* Extensions placeholder */ ?>
-                        <?php echo $this->getChildHtml('customer.form.login.extra')?>
+                        <?= $this->getChildHtml('customer.form.login.extra')?>
 
-                        <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form">
+                        <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form2">
                             <ul class="form-list">
                                 <input type="hidden" name="form_key" value="<?php echo Mage::getSingleton('core/session')->getFormKey(); ?>" />
                                 <li>
