add subscribe well - refs #10699

--- a/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
+++ b/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
@@ -38,6 +38,7 @@
 			<action method="addCss"><stylesheet>css/form.css</stylesheet></action>
 			<action method="addCss"><stylesheet>css/button.css</stylesheet></action>
 			<action method="addCss"><stylesheet>css/login.css</stylesheet></action>
+			<action method="addCss"><stylesheet>css/amazonLogin.css</stylesheet></action>
 			<action ifconfig="shoppersettings/design/override_css" method="addItem"><type>skin_css</type><name>css/override.css</name></action>
 
             <action method="addItem"><type>js</type><name>queldorei/html5shiv.js</name><params/><if>lt IE 9</if></action>
@@ -311,4 +312,7 @@
 		</reference>
 	</cms_page>
 
+	<customer_account_login>
+		<remove name="amazonpayments_login"></remove>
+    </customer_account_login>
 </layout>
