--- a/htdocs/app/design/frontend/jumbobag/default/template/creativestyle/amazonpayments/login/button/account_login.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/creativestyle/amazonpayments/login/button/account_login.phtml
@@ -13,18 +13,9 @@
  * @author     Marek Zabrowarny / creativestyle GmbH <amazon@creativestyle.de>
  */
 ?>
-<div class="account-login amazon-login">
-    <div class="new-users">
-        <div class="content">
-            <h2><?php echo $this->helper('amazonpayments')->__('Use your Amazon Account') ?> ghsejkghslghqsukl</h2>
-            <p>
-                <?php echo $this->helper('amazonpayments')->__('With Amazon Pay, you can use the shipping and payment information stored in your Amazon account to place an order on this website. It\'s a convenient and trusted way to pay that\'s enjoyed by millions of people.'); ?>
-                <?php echo $this->helper('amazonpayments')->__('By selecting Login with Amazon, you will be asked to sign-in securely to your Amazon account without leaving the shop.'); ?>
-            </p>
-        </div>
-    </div>
+<div class="amazonLogin">
     <div class="buttons-set">
-        <div id="<?php echo $this->getWidgetHtmlId(); ?>" class="<?php echo $this->getWidgetClass(); ?>"></div>
+        <div id="<?= $this->getWidgetHtmlId(); ?>" class="amazonLogin__button <?= $this->getWidgetClass(); ?>"></div>
         <?php if ($this->isCustomDesignSet()): ?>
             <script type="text/javascript">//<![CDATA[
                 var buttonDiv = $('<?php echo $this->getWidgetHtmlId(); ?>');
@@ -39,6 +30,14 @@
                 <?php endif; ?>
             //]]></script>
         <?php endif; ?>
+    </div>
+    <div class="new-users">
+        <div class="amazonLogin__txt">
+            <p>
+                <?= $this->helper('amazonpayments')->__('With Amazon Pay, you can use the shipping and payment information stored in your Amazon account to place an order on this website. It\'s a convenient and trusted way to pay that\'s enjoyed by millions of people.'); ?>
+                <?= $this->helper('amazonpayments')->__('By selecting Login with Amazon, you will be asked to sign-in securely to your Amazon account without leaving the shop.'); ?>
+            </p>
+        </div>
     </div>
 </div>
 <?php if ($this->getMoveBefore()): ?>
