--- a/htdocs/app/design/frontend/jumbobag/default/template/customer/form/login.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/customer/form/login.phtml
@@ -35,7 +35,7 @@
 <div class="rowContainer rowContainer--col2">
     <section class="col well">
         <header class="well__header">
-            <h1 class="well__header__title"><?= $this->__('Sign In') ?></h1>
+            <h1 class="well__header__title heading"><?= $this->__('Sign In') ?></h1>
         </header>
 
         <article class="well__body">
@@ -78,7 +78,7 @@
 
  --><section class="col well well--gray">
         <header class="well__header">
-            <h1 class="well__header__title"><?= $this->__('Sign Up') ?></h1>
+            <h1 class="well__header__title heading"><?= $this->__('Sign Up') ?></h1>
         </header>
 
         <article class="well__body">
