--- a/htdocs/app/design/frontend/jumbobag/default/template/checkout/cart.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/checkout/cart.phtml
@@ -33,7 +33,7 @@
 ?>
 <div class="cart">
     <div class="page-title title-buttons">
-        <h1><?php echo $this->__('Shopping Cart') ?></h1>
+        <h1 class="heading"><?php echo $this->__('Shopping Cart') ?></h1>
         <?php if(!$this->hasError()): ?>
         <ul class="checkout-types">
         <?php foreach ($this->getMethods('top_methods') as $method): ?>
