--- a/htdocs/skin/frontend/jumbobag/default/css/grid.css
+++ b/htdocs/skin/frontend/jumbobag/default/css/grid.css
@@ -13,3 +13,15 @@
 	width: 46%;
 	margin: 0 2%;
 }
+
+@media only screen and (max-width: 767px) {
+	.rowContainer {
+		margin-bottom: 0;
+	}
+	.rowContainer .col {
+		min-height: auto;
+		width: 100%;
+		margin: 0;
+		border-radius: 0;
+	}
+}
