register desktop - refs #10699

--- a/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
+++ b/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
@@ -39,7 +39,7 @@
 			<action method="addCss"><stylesheet>css/headings.css</stylesheet></action>
 			<action method="addCss"><stylesheet>css/form.css</stylesheet></action>
 			<action method="addCss"><stylesheet>css/button.css</stylesheet></action>
-			<action method="addCss"><stylesheet>css/login.css</stylesheet></action>
+			<action method="addCss"><stylesheet>css/customer.css</stylesheet></action>
 			<action method="addCss"><stylesheet>css/amazonLogin.css</stylesheet></action>
 			<action ifconfig="shoppersettings/design/override_css" method="addItem"><type>skin_css</type><name>css/override.css</name></action>
 
@@ -320,4 +320,8 @@
 	<customer_account_login>
 		<remove name="amazonpayments_login"></remove>
     </customer_account_login>
+
+    <customer_account_create>
+		<remove name="amazonpayments_login"></remove>
+    </customer_account_create>
 </layout>
