--- a/htdocs/app/design/frontend/jumbobag/default/layout/customer.xml
+++ b/htdocs/app/design/frontend/jumbobag/default/layout/customer.xml
@@ -94,7 +94,6 @@ Layout for customer login page
             <block type="customer/form_login" name="customer_form_login" template="customer/form/login.phtml">
                 <block type="amazonpayments/login_button" name="amazon_sign_in" template="creativestyle/amazonpayments/login/button/account_login.phtml">
                     <action method="setIdSuffix"><value>div</value></action>
-                    <!-- <action method="setMoveBefore"><value>login-form</value></action> -->
                 </block>
             </block>
         </reference>
@@ -135,6 +134,10 @@ New customer registration
             <block type="customer/form_register" name="customer_form_register" template="customer/form/register.phtml">
                 <block type="page/html_wrapper" name="customer.form.register.fields.before" as="form_fields_before" translate="label">
                     <label>Form Fields Before</label>
+                </block>
+                <block type="jumbobag_customer/widget_name" name="customer_register.widget_name" template="customer/widget/formName.phtml"></block>
+                <block type="amazonpayments/login_button" name="amazon_sign_in" template="creativestyle/amazonpayments/login/button/account_login.phtml">
+                    <action method="setIdSuffix"><value>div</value></action>
                 </block>
             </block>
         </reference>
