--- a/htdocs/app/design/frontend/jumbobag/default/template/customer/form/forgotpassword.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/customer/form/forgotpassword.phtml
@@ -10,97 +10,58 @@
  * http://opensource.org/licenses/afl-3.0.php
  * If you did not receive a copy of the license and are unable to
  * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
+ * to license@magento.com so we can send you a copy immediately.
  *
  * DISCLAIMER
  *
  * Do not edit or add to this file if you wish to upgrade Magento to newer
  * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
+ * needs please refer to http://www.magento.com for more information.
  *
  * @category    design
  * @package     base_default
- * @copyright   Copyright (c) 2012 Magento Inc. (http://www.magentocommerce.com)
+ * @copyright   Copyright (c) 2006-2016 X.commerce, Inc. and affiliates (http://www.magento.com)
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php
-/**
- * Customer login form template
- *
- * @see app/design/frontend/base/default/template/customer/form/login.phtml
- */
-/** @var $this Mage_Customer_Block_Form_Login */
-?>
-<div class="account-login">
+<div class="rowContainer">
+    <section class="col well">
+        <header class="well__header">
+            <h1 class="well__header__title heading"><?= $this->__('Forgot Your Password') ?></h1>
+        </header>
 
-    <div class="block block-login">
-        <div class="block-slider">
-            <ul class="slides">
-                <li>
-                    <div class="block-title">
-                        <strong><span><?php echo $this->__('Sign In') ?></span></strong>
-                    </div>
-                    <div class="block-content">
-                        <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-                        <form action="<?php echo $this->helper('customer')->getLoginPostUrl() ?>" method="post" id="login-form">
-                            <ul class="form-list">
-                                <li>
-                                    <label for="email" class="required"><?php echo $this->__('Email Address') ?></label>
-                                    <div class="input-box">
-                                        <input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
-                                    </div>
-                                </li>
-                                <li>
-                                    <label for="pass" class="required"><?php echo $this->__('Password') ?></label>
-                                    <div class="input-box">
-                                        <input type="password" name="login[password]" class="input-text required-entry validate-password" id="pass" title="<?php echo $this->__('Password') ?>" />
-                                    </div>
-                                </li>
-                                <?php echo $this->getChildHtml('form.additional.info'); ?>
-                                <?php echo $this->getChildHtml('persistent.remember.me'); ?>
-                            </ul>
-                            <?php echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
-                            <button type="submit" class="button" title="<?php echo $this->__('Login') ?>" name="send" id="send2"><span><span><?php echo $this->__('Login') ?></span></span></button>
-                            <a href="<?php echo $this->getForgotPasswordUrl() ?>" class="forgot-password" id="forgot-password"><?php echo $this->__('Forgot Your Password?') ?></a>
+        <article class="well__body">
+            <p><?= $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p>
 
-                            <?php if (Mage::helper('checkout')->isContextCheckout()): ?>
-                            <input name="context" type="hidden" value="checkout" />
-                            <?php endif; ?>
-                        </form>
-                    </div>
-                </li>
-                <li>
-                    <div class="block-title">
-                        <strong><span><?php echo $this->__('Forgot Your Password?') ?></span></strong>
-                    </div>
-                    <div class="block-content">
-                        <form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
-                            <ul class="form-list">
-                                <li>
-                                    <label for="email" class="required"><?php echo $this->__('Email Address') ?></label>
-                                    <div class="input-box">
-                                        <input type="text" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?php echo $this->htmlEscape($this->getEmailValue()) ?>" />
-                                    </div>
-                                </li>
-                                <?php echo $this->getChildHtml('form.additional.info'); ?>
-                            </ul>
-                            <button type="submit" class="button" title="<?php echo $this->__('Submit') ?>"><span><span><?php echo $this->__('Submit') ?></span></span></button>
-                            <a href="<?php echo $this->getForgotPasswordUrl() ?>" class="forgot-password" id="back-login"><?php echo $this->__('Back to Login?'); ?></a>
-                        </form>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="new-users">
-            <button type="button" title="<?php echo $this->__('Create an Account') ?>" class="button invert" onclick="window.location='<?php echo $this->helper('customer')->getRegisterUrl(); ?>';"><span><span><?php echo $this->__('Create an Account') ?></span></span></button>
-        </div>
-    </div>
+            <form class="form" action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-customer-forgotpassword">
+                <?= $this->getMessagesBlock()->toHtml() ?>
 
-    <script type="text/javascript">
-        //<![CDATA[
-        var dataForm = new VarienForm('login-form', true);
-        var dataForgetForm = new VarienForm('form-validate', true);
-        //]]>
-    </script>
+                <div class="form__group">
+                    <label for="email_address" class="required">
+                        <?= $this->__('Email Address') ?><em>*</em>
+                    </label>
+                    <input type="text" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmailValue()) ?>" />
+                </div>
+
+                <?= $this->getChildHtml('form.additional.info'); ?>
+
+                <div class="form__submit">
+                    <button type="submit" class="btn" title="<?= Mage::helper('core')->quoteEscape($this->__('Submit')) ?>">
+                        <?= $this->__('Submit') ?>
+                    </button>
+                </div>
+
+                <div class="form__extra">
+                    <?= $this->__('* Required Fields') ?>
+                </div>
+            </form>
+        </article>
+    </section>
 </div>
+
+<script type="text/javascript">
+//<![CDATA[
+    var dataForm = new VarienForm('form-customer-forgotpassword', true);
+//]]>
+</script>
+
