--- a/htdocs/app/design/frontend/jumbobag/default/layout/customer.xml
+++ b/htdocs/app/design/frontend/jumbobag/default/layout/customer.xml
@@ -212,6 +212,19 @@ New customer registration
         </reference>
     </customer_account_edit>
 
+    <customer_account_forgotpasswordsent>
+        <remove name="right"/>
+        <remove name="left"/>
+
+        <reference name="root">
+            <action method="setTemplate"><template>page/1column.phtml</template></action>
+            <action method="setHeaderTitle" translate="title" module="customer"><title>Check your inbox</title></action>
+        </reference>
+        <reference name="content">
+            <block type="core/template" name="forgotPasswordSent" template="customer/form/forgotpasswordsent.phtml"/>
+        </reference>
+    </customer_account_forgotpasswordsent>
+
 <!--
 Customer account pages, rendered for all tabs in dashboard
 -->
