--- a/htdocs/app/design/frontend/jumbobag/default/template/customer/form/forgotpassword.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/customer/form/forgotpassword.phtml
@@ -25,9 +25,9 @@
  */
 ?>
 <div class="rowContainer">
-    <section class="col well">
+    <section class="col well well--half">
         <header class="well__header">
-            <h1 class="well__header__title heading"><?= $this->__('Forgot Your Password') ?></h1>
+            <h1 class="well__header__title blueCapitalized heading"><?= $this->__('Forgot Your Password') ?></h1>
         </header>
 
         <article class="well__body">
