--- a/htdocs/skin/frontend/jumbobag/default/css/local.css
+++ b/htdocs/skin/frontend/jumbobag/default/css/local.css
@@ -715,26 +715,15 @@ div.alert button:hover{cursor:pointer;background-position:0 -9px;}
 .cart .cart-collaterals .cart-total{padding:0;}
 .cart .cart-collaterals .cart-total .checkout-types{float:none;position:relative;width:100%;overflow:hidden;margin:0;padding:30px 0 25px;background:#fbfbfb;text-align:center;-webkit-box-shadow:inset 0px 5px 6px -4px rgba(0, 0, 0, 0.15);-moz-box-shadow:inset 0px 5px 6px -4px rgba(0, 0, 0, 0.15);box-shadow:inset 0px 5px 6px -4px rgba(0, 0, 0, 0.15);}
 .cart .cart-collaterals .cart-total .checkout-types button.button{margin:0 0 10px}
-#shopping-cart-totals-table{margin:20px auto 17px;}
+
+#shopping-cart-totals-table{margin:20px auto 17px;border-radius:2px}
 #shopping-cart-totals-table strong{font-family:"Myriad Pro", serif;font-size:24px;font-weight:400;text-transform:uppercase;letter-spacing:-1.2px;color:#000;color:rgba(0,0,0,0.75);}
 #shopping-cart-totals-table .a-right{text-align:center !important;}
 #shopping-cart-totals-table td{padding:0 0 5px;width:60%;}
-.data-table{border-collapse:separate;border-top:6px solid #575757;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;-moz-box-shadow:0px 0px 8px rgba(0, 0, 0, 0.15);-webkit-box-shadow:0px 0px 8px rgba(0, 0, 0, 0.15);box-shadow:0px 0px 8px rgba(0, 0, 0, 0.15);}
-.data-table th, .data-table td, .data-table td a{color:#000;color:rgba(0,0,0,0.67)}
+
+.data-table th, .data-table td, .data-table td a{color:#000;}
 .data-table td a.product-image, .data-table td a.product-image img{display:block;margin:0 auto;}
 .data-table td a:hover{color:#000;text-decoration:none;}
-.data-table tbody td{border:1px solid #e9e9e9;border-top:none;border-left:none;}
-.data-table tbody tr:last-child td{border-bottom:none;}
-.data-table thead, .data-table tfoot{background:#fafafa;}
-.data-table thead th{-webkit-box-shadow:inset 0px -4px 6px -4px rgba(0, 0, 0, 0.15);-moz-box-shadow:inset 0px -4px 6px -4px rgba(0, 0, 0, 0.15);box-shadow:inset 0px -4px 6px -4px rgba(0, 0, 0, 0.15);}
-.data-table tfoot td{-webkit-box-shadow:inset 0px 4px 6px -4px rgba(0, 0, 0, 0.15);-moz-box-shadow:inset 0px 4px 6px -4px rgba(0, 0, 0, 0.15);box-shadow:inset 0px 4px 6px -4px rgba(0, 0, 0, 0.15);}
-.data-table tr.even, .data-table tr.odd{background-color:#fff;}
-.data-table th{padding:18px 23px;font-weight:300;}
-.data-table td{padding:18px;}
-.data-table td.td-edit, .data-table td.td-price{padding:26px 18px;}
-.data-table td.td-image{border-left:none;}
-.data-table td.td-image img{width:115px;height:auto;}
-.data-table td.td-delete{border-right:none;}
 .data-table .product-name{font-weight:700;}
 .data-table .td-title{display:none;}
 .data-table .td-actions{display:none;}
@@ -744,6 +733,7 @@ div.alert button:hover{cursor:pointer;background-position:0 -9px;}
 .data-table .btn-remove:hover{background-color:#393431}
 .data-table .btn-continue{float:left;}
 .data-table button.button span{font-size:12px;text-transform:lowercase;}
+
 #product_comparison{margin:0 0 20px}
 #product_comparison th{background:#fafafa;-webkit-box-shadow:inset -6px 0px 6px -6px rgba(0, 0, 0, 0.15);-moz-box-shadow:inset -6px 0 6px -6px rgba(0, 0, 0, 0.15);box-shadow:inset -6px 0 6px -6px rgba(0, 0, 0, 0.15);}
 #product_comparison thead, #product_comparison tfoot{background:#fff;}
@@ -754,9 +744,8 @@ div.alert button:hover{cursor:pointer;background-position:0 -9px;}
 #product_comparison .price-box, #product_comparison .product-name, #product_comparison p, #product_comparison ul.add-to-links li{text-align:center;}
 #product_comparison .ratings{text-align:center;}
 #product_comparison .ratings .rating-box{float:none;margin:0 auto;}
-.item-options{margin-top:10px;}
 .item-options dt{float:left;clear:left;font-style:normal;font-weight:300;}
-.item-options dt:after{content:' - ';}
+.item-options dt:after{content:': ';}
 .item-options dd{float:left;margin:0 0 3px 3px;padding:0;font-weight:400;font-style:normal;}
 .product-view .item-options{margin-top:10px;}
 .product-view .item-options dt{float:none;}
@@ -1536,3 +1525,5 @@ footer ul.links{display:none;}
 .cms-index-noroute .arguments-footer{
 	display: none !important;
 }
+
+.pull-left { float: left; }
