forgotPasswordSent (design + locales) - refs #10699

--- a/htdocs/app/design/frontend/jumbobag/default/template/customer/form/forgotpasswordsent.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/customer/form/forgotpasswordsent.phtml
@@ -1,3 +1,35 @@
-Hey ;)
+<div class="rowContainer">
+    <section class="col well">
+        <header class="well__header">
+            <h1 class="well__header__title heading"><?= $this->__('Check your inbox') ?></h1>
+        </header>
 
-<?= $this->getEmailValue() ?>
+        <article class="well__body">
+            <p><?= $this->__('We sent a confirmation link to %s', $this->getEmailValue()) ?></p>
+
+            <p><?= $this->__('Please click above to create a new password') ?></p>
+
+            <form class="form" action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-customer-forgotpassword">
+                <?= $this->getMessagesBlock()->toHtml() ?>
+                <input type="hidden" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmailValue()) ?>" />
+                <?= $this->getChildHtml('form.additional.info'); ?>
+
+                <div class="form__submit">
+                    <button type="submit" class="btn" title="<?= Mage::helper('core')->quoteEscape($this->__('Submit link')) ?>">
+                        <?= $this->__('Submit link') ?>
+                    </button>
+
+                    <p>
+                        <a href="<?= $this->helper('customer')->getRegisterUrl() ?>">
+                            <?= $this->__('Jumbobag_Customer::Register') ?>
+                        </a>
+                        <?= $this->__('or') ?>
+                        <a href="<?= $this->helper('customer')->getLoginUrl() ?>">
+                            <?= $this->__('Jumbobag_Customer::Log In') ?>
+                        </a>
+                    </p>
+                </div>
+            </form>
+        </article>
+    </section>
+</div>
