--- a/htdocs/skin/frontend/jumbobag/default/css/customer.css
+++ b/htdocs/skin/frontend/jumbobag/default/css/customer.css
@@ -70,15 +70,21 @@
 	text-transform: none;
 }
 
+.customer-account-forgotpasswordsent .well__body p {
+	text-align: center;
+}
+
 /* Tablet */	
 @media only screen and (max-width: 959px) and (min-width: 768px) {
 	.customer-account-login .col1-layout .col-main,
+	.customer-account-forgotpasswordsent .col1-layout .col-main,
 	.customer-account-forgotpassword .col1-layout .col-main {
 		width: auto;
 		margin: 0 5px;
 	}
 
-	.customer-account-forgotpassword .well__header__title {
+	.customer-account-forgotpassword .well__header__title,
+	.customer-account-forgotpasswordsent .well__header__title {
 		font-size: 28px;
 	}
 }
@@ -87,18 +93,21 @@
 @media only screen and (max-width: 767px) {
 	.customer-account-login .row,
 	.customer-account-forgotpassword .row,
+	.customer-account-forgotpasswordsent .row,
 	.customer-account-create .row {
 		width: auto;
 	}
 	.customer-account-login .col1-layout .col-main,
 	.customer-account-forgotpassword .col1-layout .col-main,
+	.customer-account-forgotpasswordsent .col1-layout .col-main,
 	.customer-account-create .col1-layout .col-main {
 		width: auto;
 		margin: 0;
 		padding: 0;
 	}
 
-	.customer-account-forgotpassword .well__header__title {
+	.customer-account-forgotpassword .well__header__title,
+	.customer-account-forgotpasswordsent .well__header__title {
 		font-size: 28px;
 	}
 	
