--- a/htdocs/skin/frontend/new_jumbobag/default/less/local.less
+++ b/htdocs/skin/frontend/new_jumbobag/default/less/local.less
@@ -166,8 +166,8 @@ button.button span span {line-height:center; padding:0 16px; font-size:14px; fon
 button.button:hover span {background-color:#393431;}
 button.button:hover span span { }
 
-button.invert span, button.btn-continue span, .cart-shipping button span, .cart-coupon button span {background-color:#393431;}
-button.invert:hover span, button.btn-continue:hover span, .cart-shipping button:hover span, .cart-coupon button:hover span {background-color:#97d2c9;}
+button.invert span, button.btn-continue span{background-color:#393431;}
+button.invert:hover span, button.btn-continue:hover span {background-color:#97d2c9;}
 
 button.btn-proceed-checkout span span {padding-right:60px; background:url('../images/arrow_button.png') 100% 50% no-repeat; }
 button.btn-proceed-checkout:hover span span { background-position:98% 50%;  }
@@ -1173,10 +1173,6 @@ div.alert button:hover{ cursor:pointer; background-position:0 -9px;}
 .cart .cart-collaterals .cart-total .checkout-types {float:none; position:relative; width:100%; overflow:hidden; margin:0; padding:30px 0 25px; background:#fbfbfb; text-align:center;
     -webkit-box-shadow:inset 0px 5px 6px -4px rgba(0, 0, 0, 0.15);  -moz-box-shadow:inset 0px 5px 6px -4px rgba(0, 0, 0, 0.15); box-shadow:inset 0px 5px 6px -4px rgba(0, 0, 0, 0.15);}
 .cart .cart-collaterals .cart-total .checkout-types button.button {margin:0 0 10px}
-#shopping-cart-totals-table {margin:20px auto 17px; }
-#shopping-cart-totals-table strong{ font-family:"Myriad Pro", serif; font-size:24px; font-weight:400; text-transform:uppercase; letter-spacing:-1.2px; color:#000; color:rgba(0,0,0,0.75); }
-#shopping-cart-totals-table .a-right {text-align:center !important;}
-#shopping-cart-totals-table td {padding:0 0 5px; width:60%;}
 
 .data-table{border-collapse:separate; border-top:6px solid #575757; -webkit-border-radius:2px; -moz-border-radius:2px; border-radius:2px;
     -moz-box-shadow:0px 0px 8px rgba(0, 0, 0, 0.15); -webkit-box-shadow:0px 0px 8px rgba(0, 0, 0, 0.15); box-shadow:0px 0px 8px rgba(0, 0, 0, 0.15);}
