--- a/htdocs/app/design/frontend/jumbobag/default/template/checkout/cart.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/checkout/cart.phtml
@@ -62,11 +62,11 @@
                 </thead>
                 <tfoot>
                     <tr class="blueTable__row">
-                        <td colspan="50" class="a-right">
+                        <td colspan="50" class="a-left">
+                            <button type="submit" title="<?php echo $this->__('Update Shopping Cart') ?>" class="btn pull-right"><span><span><?php echo $this->__('Update Shopping Cart') ?></span></span></button>
                             <?php if(Mage::getUrl()): ?>
-                                <button type="button" title="<?php echo $this->__('Continue Shopping') ?>" class="btn pull-left" onclick="setLocation('<?php echo Mage::getUrl() ?>')"><span><span><?php echo $this->__('Continue Shopping') ?></span></span></button>
+                                <button type="button" title="<?php echo $this->__('Continue Shopping') ?>" class="btn" onclick="setLocation('<?php echo Mage::getUrl() ?>')"><span><span><?php echo $this->__('Continue Shopping') ?></span></span></button>
                             <?php endif; ?>
-                            <button type="submit" title="<?php echo $this->__('Update Shopping Cart') ?>" class="btn"><span><span><?php echo $this->__('Update Shopping Cart') ?></span></span></button>
                         </td>
                     </tr>
                 </tfoot>
