--- a/htdocs/skin/frontend/jumbobag/default/css/checkout.css
+++ b/htdocs/skin/frontend/jumbobag/default/css/checkout.css
@@ -23,6 +23,12 @@
 	background: transparent;
 }
 
+@media only screen and (min-width: 960px) {
+	ul.checkout-types li {
+		float: left;
+	}
+}
+
 @media only screen and (min-width: 1200px) {
 	.checkout-cart-index .cart-collaterals > div:nth-of-type(2) {
 		margin: 0 65px !important;
@@ -91,4 +97,101 @@
 	text-align: center;
 	padding-right: 8px;
 	padding-left: 6px;
+}
+
+.checkout-cart-index #shopping-cart-table .item-actions {
+	display: none;
+}
+
+@media only screen and (max-width: 959px) {
+
+	.checkout-cart-index .col1-layout .col-main {
+		width: initial;
+		margin:0;
+	}
+
+	.checkout-cart-index .cart .cart-collaterals .grid_4,
+	.checkout-cart-index .cart .cart-collaterals .grid_3 {
+		width: 90%;
+		max-width: 768px;
+		margin: 5%;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	.checkout-cart-index .main.row {
+		width: 100%;
+	}
+
+	.checkout-cart-index #shopping-cart-table .blueTable__row th, 
+	.checkout-cart-index #shopping-cart-table .blueTable__row td {
+		padding-top: 5px;
+		padding-bottom: 5px;
+	}
+
+	.checkout-cart-index #shopping-cart-table .blueTable__row th.td-name {
+		padding-left: 10px;
+	}
+
+	.checkout-cart-index #shopping-cart-table .blueTable__row .td-price {
+		padding-right: 10px;
+		padding-left: 10px;
+	}
+
+	.checkout-cart-index #shopping-cart-table .item-actions {
+		display: block;
+		float: left;
+		width: 100%;
+	}
+
+	.checkout-cart-index #shopping-cart-table .item-actions .item-action {
+		padding-right: 5px;
+	}
+
+	.checkout-cart-index #shopping-cart-table .item-actions .item-action:last-of-type {
+		padding-right: 0
+	}
+
+	.checkout-cart-index #shopping-cart-table .td-title,
+	.checkout-cart-index #shopping-cart-table .td-edit,
+	.checkout-cart-index #shopping-cart-table .td-delete {
+		display: none;
+	}
+
+	.checkout-cart-index #shopping-cart-table .td-image {
+	    padding: 0;
+	    margin: 0;
+	}
+
+	.checkout-cart-index #shopping-cart-table .td-image,
+	.checkout-cart-index #shopping-cart-table .td-image img {
+		max-width: 40px;
+	}
+
+	.checkout-cart-index #shopping-cart-table .td-price {
+		padding: 0;
+		font-size: 10px;
+	}
+
+	.checkout-cart-index #shopping-cart-table .td-qty {
+		padding: 5px;
+	}
+
+	.checkout-cart-index #shopping-cart-table .td-qty .form__group {
+		max-width: 30px;
+	}
+
+	.checkout-cart-index #shopping-cart-table .td-qty input {
+		width: 18px;
+	}
+
+	.checkout-cart-index #shopping-cart-table 
+	tfoot .blueTable__row.first.last > td {
+		text-align: center !important;
+	}
+	.checkout-cart-index #shopping-cart-table 
+	tfoot .blueTable__row.first.last > td > button {
+		float: none !important;
+		margin: 5px 10px;
+	}
 }
